--- a/webapp/src/components/boardTemplateSelector/boardTemplateSelectorItem.scss
+++ b/webapp/src/components/boardTemplateSelector/boardTemplateSelectorItem.scss
@@ -22,7 +22,7 @@
         margin-right: 10px;
 
         i {
-            font-size: 16px;
+            font-size: 1.125rem;
         }
     }
 
@@ -46,4 +46,3 @@
         right: -8px;
     }
 }
-
