--- a/webapp/src/components/boardsSwitcherDialog/boardSwitcherDialog.scss
+++ b/webapp/src/components/boardsSwitcherDialog/boardSwitcherDialog.scss
@@ -6,7 +6,7 @@
     width: 100%;
 
     .CompassIcon {
-        font-size: 18px;
+        font-size: 1.25rem;
         color: rgba(var(--center-channel-color-rgb), 0.56);
     }
 
