--- a/webapp/src/components/calculations/calculation.scss
+++ b/webapp/src/components/calculations/calculation.scss
@@ -15,7 +15,7 @@
         .calculationLabel {
             text-transform: capitalize;
             letter-spacing: 0;
-            font-size: 14px;
+            font-size: 1rem;
             margin-right: 0;
         }
 
@@ -30,7 +30,7 @@
 
     .calculationLabel {
         text-transform: uppercase;
-        font-size: 12px;
+        font-size: 0.875rem;
         opacity: 0.8;
         margin-right: 8px;
         letter-spacing: 0.8px;
@@ -46,7 +46,7 @@
     }
 
     .ChevronUpIcon {
-        font-size: 22px;
+        font-size: 1.42rem;
         line-height: 14px;
         padding: 0;
     }
