--- a/webapp/src/components/cardDetail/attachment.scss
+++ b/webapp/src/components/cardDetail/attachment.scss
@@ -22,10 +22,13 @@
     }
 
     .attachment-title {
-        font-family: 'Open Sans';
+        font-family: "Pretendard Variable", Pretendard, -apple-system,
+            BlinkMacSystemFont, system-ui, Roboto, "Helvetica Neue", "Segoe UI",
+            "Apple SD Gothic Neo", "Noto Sans KR", "Malgun Gothic",
+            "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", sans-serif;
         font-style: normal;
         font-weight: 600;
-        font-size: 14px;
+        font-size: 1rem;
         line-height: 20px;
     }
 }
