--- a/webapp/src/components/globalHeader/globalHeader.scss
+++ b/webapp/src/components/globalHeader/globalHeader.scss
@@ -19,7 +19,7 @@
         margin-left: 8px;
 
         i {
-            font-size: 18px;
+            font-size: 1.25rem;
             width: 18px;
             height: 18px;
             display: flex;
@@ -39,5 +39,4 @@
             color: rgba(var(--sidebar-text-rgb), 1);
         }
     }
-
 }
