--- a/webapp/src/components/messages/versionMessage.scss
+++ b/webapp/src/components/messages/versionMessage.scss
@@ -21,7 +21,7 @@
         color: #fff;
 
         .CompassIcon {
-            font-size: 18px;
+            font-size: 1.25rem;
             margin-right: 2px;
         }
 
