--- a/webapp/src/components/personSelector.scss
+++ b/webapp/src/components/personSelector.scss
@@ -61,7 +61,7 @@
     }
 
     .react-select__multi-value__remove {
-        font-size: 18px;
+        font-size: 1.25rem;
         color: rgba(var(--center-channel-color-rgb), 0.56);
         margin: 6px;
         border-radius: 100%;
