--- a/webapp/src/components/topBar.scss
+++ b/webapp/src/components/topBar.scss
@@ -1,4 +1,4 @@
-@import '../styles/z-index';
+@import "../styles/z-index";
 
 .TopBar {
     @include z-index(top-bar);
@@ -16,7 +16,7 @@
     }
 
     a.link {
-        font-size: 12px;
+        font-size: 0.875rem;
         line-height: 14px;
         padding: 2px 10px;
         color: rgba(var(--center-channel-color-rgb), 0.72);
@@ -27,7 +27,7 @@
     }
 
     .HelpIcon {
-        font-size: 20px;
+        font-size: 1.375rem;
         color: currentColor;
     }
 
@@ -45,7 +45,7 @@
     }
 
     .versionBadge {
-        font-size: 10px;
+        font-size: 0.75rem;
         line-height: 14px;
         font-weight: 500;
         margin-left: 3px;
