--- a/webapp/src/components/viewHeader/viewHeader.scss
+++ b/webapp/src/components/viewHeader/viewHeader.scss
@@ -58,7 +58,7 @@
     position: relative;
 
     input {
-        font-size: 12px;
+        font-size: 0.875rem;
         border-radius: 4px;
         padding: 0 12px 0 32px;
         height: 32px;
