--- a/webapp/src/components/viewLImitDialog/viewLimitDialogWrapper.scss
+++ b/webapp/src/components/viewLImitDialog/viewLimitDialogWrapper.scss
@@ -1,6 +1,6 @@
 .ViewLimitSuccessNotify {
     .NotificationBox__icon {
-        font-size: 24px;
+        font-size: 1.62rem;
 
         svg {
             stroke: var(--online-indicator);
