--- a/webapp/src/widgets/buttons/iconButton.scss
+++ b/webapp/src/widgets/buttons/iconButton.scss
@@ -56,14 +56,14 @@
         flex: 0 0 40px;
         width: 40px;
         height: 40px;
-        font-size: 24px;
+        font-size: 1.62rem;
     }
 
     &.size--small {
         flex: 0 0 32px;
         width: 32px;
         height: 32px;
-        font-size: 18px;
+        font-size: 1.25rem;
     }
 
     &.margin-left {
