--- a/webapp/src/widgets/icons/link.scss
+++ b/webapp/src/widgets/icons/link.scss
@@ -1,7 +1,6 @@
-
 .LinkIcon {
     color: rgba(var(--body-color), 0.5);
-    font-size: 18px;
+    font-size: 1.25rem;
     width: 16px;
 
     &::before {
