--- a/webapp/src/components/cardLimitNotification.scss
+++ b/webapp/src/components/cardLimitNotification.scss
@@ -4,7 +4,7 @@
     height: unset;
 
     .NotificationBox__icon {
-        font-size: 24px;
+        font-size: 1.62rem;
 
         svg {
             stroke: var(--online-indicator);
