--- a/webapp/src/components/iconSelector.scss
+++ b/webapp/src/components/iconSelector.scss
@@ -15,13 +15,13 @@
         &.size-s {
             height: 24px;
             width: 24px;
-            font-size: 20px;
+            font-size: 1.375rem;
         }
 
         &.size-m {
             height: 28px;
             width: 28px;
-            font-size: 22px;
+            font-size: 1.42rem;
         }
 
         &.size-l {
