--- a/webapp/src/components/searchDialog/searchDialog.scss
+++ b/webapp/src/components/searchDialog/searchDialog.scss
@@ -1,4 +1,3 @@
-
 .BoardSwitcherDialog {
     color: rgba(var(--center-channel-color-rgb));
 
@@ -97,7 +96,7 @@
             .MagnifyIcon {
                 position: absolute;
                 left: 13px;
-                font-size: 18px;
+                font-size: 1.25rem;
                 width: 20px;
                 height: 100%;
                 opacity: 0.48;
@@ -107,7 +106,7 @@
 
             .searchQuery {
                 height: 48px;
-                font-size: 14px;
+                font-size: 1rem;
                 border-radius: 4px;
                 border: 1px solid rgba(var(--center-channel-color-rgb), 0.16);
                 background: var(--center-channel-bg);
