--- a/webapp/src/components/table/table.scss
+++ b/webapp/src/components/table/table.scss
@@ -1,4 +1,4 @@
-@import '../../styles/z-index';
+@import "../../styles/z-index";
 
 .Table {
     margin-top: 16px;
@@ -67,7 +67,7 @@
             white-space: nowrap;
             text-transform: none;
             font-weight: 600;
-            font-size: 14px;
+            font-size: 1rem;
             width: 100%;
             height: 32px;
 
@@ -98,7 +98,7 @@
 
     .octo-table-cell__expand {
         margin-right: 4px;
-        font-size: 24px;
+        font-size: 1.62rem;
 
         i {
             font-size: inherit;
@@ -117,7 +117,7 @@
         box-sizing: border-box;
         padding: 8px;
         height: 44px;
-        font-size: 14px;
+        font-size: 1rem;
         position: relative;
         text-overflow: ellipsis;
 
@@ -146,7 +146,7 @@
             .octo-icon {
                 min-width: 20px;
                 margin-top: 3px;
-                font-size: 16px;
+                font-size: 1.125rem;
                 margin-right: 4px;
                 display: flex;
                 align-items: center;
@@ -260,7 +260,6 @@
                 font-size: inherit;
                 font-weight: normal;
             }
-
         }
     }
 
