--- a/webapp/src/pages/welcome/welcomePage.scss
+++ b/webapp/src/pages/welcome/welcomePage.scss
@@ -88,10 +88,10 @@
 }
 
 .WelcomePage__subtitle {
-    font-size: 16px;
+    font-size: 1.125rem;
     line-height: 1.6;
 
     @media (min-width: 2000px) {
-        font-size: 20px;
+        font-size: 1.375rem;
     }
 }
