--- a/webapp/src/widgets/guestBadge.scss
+++ b/webapp/src/widgets/guestBadge.scss
@@ -10,7 +10,7 @@
     background: rgba(var(--center-channel-color-rgb), 0.16);
     border-radius: 2px;
     font-family: inherit;
-    font-size: 10px;
+    font-size: 0.75rem;
     font-weight: 600;
     line-height: 14px;
 }
